--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -68,24 +68,28 @@ jobs:
         SECRET_LOGIN_PASS: ${{ secrets.SECRET_LOGIN_PASS }}
         SECRET_SESSION_KEY: ${{ secrets.SECRET_SESSION_KEY }}
       run: |
+        cd source
         echo "github:" >> source/secret.yaml
         echo "  token: $SECRET_GITHUB_TOKEN" >> source/secret.yaml
         echo "  user: $SECRET_GITHUB_TOKEN" >> source/secret.yaml
         echo "  project: $SECRET_GITHUB_PROJECT" >> source/secret.yaml
         echo "login_pass: $SECRET_LOGIN_PASS" >> source/secret.yaml
         echo "session_key: $SECRET_SESSION_KEY" >> source/secret.yaml
+        cd ..
 
 
     - name: Go Build
       run: |
         cd source
         go build
+        cd ..
 
     - name: GAE deploy
       env:
         DECRYPT_PASSWORD: ${{ secrets.DECRYPT_PASSWORD }}
         PROJECT_NAME: ${{ secrets.PROJECT_NAME }}
       run: |
+        cd source
         openssl aes-256-cbc -k $DECRYPT_PASSWORD -d -in encrypt-google-services.json -out google-services.json
         gcloud auth activate-service-account --key-file google-services.json
         gcloud app deploy app.yaml --project $PROJECT_NAME
