--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -89,4 +89,5 @@ jobs:
         cd source
         openssl aes-256-cbc -k $DECRYPT_PASSWORD -d -in encrypt-google-services.json -out google-services.json
         gcloud auth activate-service-account --key-file google-services.json
-        gcloud app deploy app.yaml --project $PROJECT_NAME
+        gcloud --quiet app deploy app.yaml --project=$PROJECT_NAME --version=$GITHUB_RUN_NUMBER
+        gcloud --quiet app deploy cron.yaml --project=$PROJECT_NAME --version=$GITHUB_RUN_NUMBER
