--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -82,12 +82,10 @@ jobs:
         cd ..
 
     - name: GAE deploy
-      env:
-        DECRYPT_PASSWORD: ${{ secrets.DECRYPT_PASSWORD }}
-        PROJECT_NAME: ${{ secrets.PROJECT_NAME }}
-      run: |
-        cd source
-        openssl aes-256-cbc -k $DECRYPT_PASSWORD -d -in encrypt-google-services.json -out google-services.json -md md5
-        gcloud auth activate-service-account --key-file google-services.json
-        gcloud --quiet app deploy app.yaml --project=$PROJECT_NAME --version=$GITHUB_RUN_NUMBER
-        gcloud --quiet app deploy cron.yaml --project=$PROJECT_NAME --version=$GITHUB_RUN_NUMBER
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+    - run: |
+        gcloud --quiet app deploy app.yaml --version=$GITHUB_RUN_NUMBER
+        gcloud --quiet app deploy cron.yaml --version=$GITHUB_RUN_NUMBER
