構文の修正
https://github.com/GoogleCloudPlatform/github-actions/tree/master/setup-gcloud
書き方ちゃうやん…

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -81,8 +81,8 @@ jobs:
         go build
         cd ..
 
-    - name: Setup GCP Auth
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+    - name: Set Up GCP Auth
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
         service_account_key: ${{ secrets.GCP_SA_KEY }}
