--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -61,19 +61,7 @@ jobs:
         curl -o source/public/images/404.jpg ${{ secrets.NOT_FOUND_URL }}
 
     - name: Set secret.yaml
-      env:
-        SECRET_GITHUB_TOKEN: ${{ secrets.SECRET_GITHUB_TOKEN }}
-        SECRET_GITHUB_USER: ${{ secrets.SECRET_GITHUB_USER }}
-        SECRET_GITHUB_PROJECT: ${{ secrets.SECRET_GITHUB_PROJECT }}
-        SECRET_LOGIN_PASS: ${{ secrets.SECRET_LOGIN_PASS }}
-        SECRET_SESSION_KEY: ${{ secrets.SECRET_SESSION_KEY }}
-      run: |
-        echo "github:" >> source/secret.yaml
-        echo "  token: $SECRET_GITHUB_TOKEN" >> source/secret.yaml
-        echo "  user: $SECRET_GITHUB_TOKEN" >> source/secret.yaml
-        echo "  project: $SECRET_GITHUB_PROJECT" >> source/secret.yaml
-        echo "login_pass: $SECRET_LOGIN_PASS" >> source/secret.yaml
-        echo "session_key: $SECRET_SESSION_KEY" >> source/secret.yaml
+      run: echo "${{ secrets.SECRET_YAML_BASE64 }}" | base64b -d > source/secret.yaml
 
     - name: Go Build
       run: |
@@ -93,3 +81,10 @@ jobs:
         cd source
         gcloud --quiet app deploy app.yaml --version=$GITHUB_RUN_NUMBER
         gcloud --quiet app deploy cron.yaml
+
+    - name: Notify slack
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+      uses: pullreminders/slack-action@master
+      with:
+        args: '{\"channel\":\"${{ secrets.SLACK_CHANNEL_ID }}\",\"text\":\"Success Build\\nhttps://github.com/bvlion/NonPublicIssueViewer/commit/${{ secrets.GITHUB_SHA }}\"}'
