--- a/assets/package.json
+++ b/assets/package.json
@@ -19,6 +19,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "lodash": ">=4.17.19"
   }
 }
